--- a/tasks/configure-Systemd.yml
+++ b/tasks/configure-Systemd.yml
@@ -2,13 +2,9 @@
 - name: Create teleport service (systemd).
   template:
     src: "teleport.service.j2"
-    dest: "{{ systemd_service_dir }}/teleport.service"
+    dest: "/etc/systemd/system/teleport.service"
     owner: "root"
     group: "root"
     mode: 0644
   register: service_installed
-
-- name: systemctl daemon-reload
-  shell: systemctl daemon-reload
-  become: yes
-  when: service_installed.changed
+  notify: restart teleport
