--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -11,7 +11,7 @@ teleport_data_dir: '/var/lib/teleport'
 
 teleport_log_level: 'WARN'
 teleport_storage_type: 'dir'
-teleport_pidfile: '/var/run/teleport.pid'
+teleport_pidfile: '/run/teleport.pid'
 
 teleport_default_address: '0.0.0.0'
 
@@ -52,4 +52,4 @@ teleport_acme_email: ''
 # teleport APPs service
 teleport_apps_data_dir: '/etc'
 teleport_apps_config_path: "/etc/teleport_apps.yaml"
-teleport_apps_pidfile: '/var/run/teleport_apps.pid'
+teleport_apps_pidfile: '/run/teleport_apps.pid'
